# sysk-forgets

./: Cargo.toml  LICENSE  README.md  todo
src/: commands.rs  error.rs  main.rs  model.rs  util.rs
src/commands/: generate.rs  mod.rs  queue.rs  search.rs  select.rs  sync.rs
src/migrations/: V1__create_db.rs  V2__change_mentioned_items_primary_key.rs
src/sql/: create_db.sql  insert_item.sql  insert_mentioned.sql  select_guid.sql  select_last_eight.sql  select_last_ten.sql  select_name.sql
src/sql/create/: db.sql
src/sql/generate/: select_entries.sql  select_item_by_guid.sql
src/sql/migrate/: 2020-04-12-change-mentioned-items-primary-key.sql
src/sql/select/: last_ten.sql  mentioned_last_date.sql
