[package]
name = "sysk-forgets"
description = "Reads the Stuff You Should Know RSS feed and stores it in a sqlite database"
version = "0.0.4-a"
authors = ["Cassandra McCarthy <cassie@7596ff.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rss = { version = "*", features = ["from_url"] }
rusqlite = "*"
clap = "*"
directories = "*"
dialoguer = "*"
chrono = "*"
vivian-essentials = "*"
