[package]
name = "sysk-forgets"
description = "Reads the Stuff You Should Know RSS feed and stores it in a sqlite database"
version = "0.0.4-a"
authors = ["Cassandra McCarthy <cassie@7596ff.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.28"
chrono = "0.4.10"
clap = "2.33.0"
directories = "2.0.2"
http = "0.2.0"
isahc = "0.9.1"
rusqlite = "0.23.0"
vivian-essentials = "0.1.0"

[dependencies.barrel]
features = ["sqlite3"]
version = "0.6.5"

[dependencies.refinery]
features = ["rusqlite"]
version = "0.2.1"

[dependencies.rss]
version = "1.9.0"
