[package]
name = "sysk-forgets"
description = "Reads the Stuff You Should Know RSS feed and stores it in a sqlite database"
version = "0.0.4-a"
authors = ["Cassandra McCarthy <cassie@7596ff.com>"]
edition = "2018"

[dependencies]
anyhow = { version = "1.0.28", default-features = false, features = [ "std" ] }
barrel = { version = "0.6.5", default-features = false, features = [ "sqlite3" ] }
chrono = { version = "0.4.10", default-features = false }
clap = { version = "2.33.0", default-features = false }
directories = { version = "2.0.2", default-features = false }
http = { version = "0.2.0", default-features = false }
isahc = { version = "0.9.1", default-features = false, features = [ "http2", "static-curl", "text-decoding" ] }
refinery = { version = "0.3.0", default-features = false, features = [ "rusqlite" ] }
rss = { version = "1.9.0", default-features = false, features = [ "builders" ] }
rusqlite = { version = "0.23.1", default-features = false }
vivian-essentials = { version = "0.1.0", default-features = false }
